infrastructure/romm/romm-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm-app
spec:
  selector:
    matchLabels:
      app: romm-app
  template:
    metadata:
      labels:
        app: romm-app
    spec:
      enableServiceLinks: false
      containers:
        - name: romm
          image: rommapp/romm:latest
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: romm-pv
              mountPath: /romm/library
              subPath: romm/library
            - name: romm-pv
              mountPath: /romm/assets
              subPath: romm/assets
            - name: romm-pv
              mountPath: /romm/config
              subPath: romm/config
            - name: romm-pv
              mountPath: /romm/resources
              subPath: romm/resources
            - name: redis-data
              mountPath: /redis-data
      volumes:
        - name: romm-pv
          persistentVolumeClaim:
            claimName: smb-share
        - name: redis-data
          emptyDir: {}
