infrastructure/romm/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm-db
spec:
  clusterIP: None
  selector:
    app: romm
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: romm
  serviceName: romm-db
  replicas: 1
  template:
    metadata:
      labels:
        app: romm
    spec:
      containers:
        - name: romm-db
          image: mariadb:12.3.3
          ports:
            - containerPort: 3306
              name: web
          volumeMounts:
            - name: mariadb-pv
              mountPath: /var/lib/mysql
              subPath: romm/db
      volumes:
        - name: mariadb-pv
          persistentVolumeClaim:
            claimName: smb-share
