infrastructure/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
spec:
  selector:
    app: romm-app
  ports:
    - port: 80
      targetPort: 8080
