infrastructure/romm/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: romm
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`romm.k8s.tstuessi.com`)
      services:
        - name: romm
          port: 80
